--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "V2Ray",
-    "description": "Deploy V2ray on Heroku.",
-    "keywords": ["V2Ray"],
+    "name": "222hhhh",
+    "description": "Deploy 222hhhh on Heroku.",
+    "keywords": ["222hhhh"],
     "env": {
         "ID": {
             "description": "UUID",
-            "value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
+            "value": "4ac2fed1-8311-44cb-b8bf-df865a224cc9"
         },
         "WSPATH": {
             "description": "WebSocket Path",
@@ -13,6 +13,6 @@
         }
     },
     "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
-    "repository": "https://github.com/bclswl0827/v2ray-heroku",
+    "repository": "https://github.com/huaidan1988/222hhhh",
     "stack": "container"
 }
